--- a/api/config/config.json
+++ b/api/config/config.json
@@ -3,7 +3,7 @@
         "username": "postgres",
         "password": "postgres",
         "database": "escola_ingles",
-        "host": "127.0.0.1",
+        "host": "db_postgres",
         "dialect": "postgres",
         "logging": false
     },
