--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.20.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "path": "^0.12.7",
         "pg": "^8.7.3",
